# genvectorxold

./: .gitignore  CMakeLists.txt  RVecSYCL
inc/Math/GenVector/: MathUtil.h
inc/SYCLMath/GenVector/: LorentzVector.h  MathUtil.h  PtEtaPhiE4D.h  PtEtaPhiM4D.h  PxPyPzE4D.h  PxPyPzM4D.h  VecOps.h  etaMax.h
plots/: plots.ipynb
plots/.ipynb_checkpoints/: plots-checkpoint.ipynb
src/: RVecSYCL.cxx
test/: InvariantMasses.cxx
testx/: CMakeLists.txt  Coords.cpp  InvariantMasses.cxx  InvariantMassesCUDA.cu  InvariantMassesCUDA.cxx  InvariantMassesSYCL.cxx  Makefile  RVec.cpp  RVecCUDA.cu  RVecSYCL.cxx  main  main.cpp
