if (oneapi)
  add_executable(CoordsOneAPI Coords.cpp)
  target_link_options(CoordsOneAPI PUBLIC -E)
  add_sycl_to_root_target_exe(TARGET CoordsOneAPI SOURCES Coords.cpp DEPENDENCIES GenVectorX SYCLMath INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/inc COMPILE_DEFINITIONS ROOT_MATH_SYCL)
  add_executable(RVecSYCL RVecSYCL.cxx)
  target_link_options(RVecSYCL PUBLIC -E)
  add_sycl_to_root_target_exe(TARGET RVecSYCL SOURCES RVecSYCL.cxx DEPENDENCIES GenVectorX SYCLMath INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/inc COMPILE_DEFINITIONS ROOT_MATH_SYCL COMPILE_TIMING)
endif()

if (opensycl)
  add_executable(CoordsOpenSYCL Coords.cpp)
  add_sycl_to_root_target(TARGET CoordsOpenSYCL SOURCES Coords.cpp DEPENDENCIES GenVectorX SYCLMath INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/inc COMPILE_DEFINITIONS ROOT_MATH_SYCL)
  add_executable(RVecSYCL RVecSYCL.cxx)
  add_sycl_to_root_target(TARGET RVecSYCL SOURCES RVecSYCL.cxx DEPENDENCIES GenVectorX SYCLMath INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/inc COMPILE_DEFINITIONS ROOT_MATH_SYCL)
endif()


if (cuda)
  add_executable(RVecCUDA RVecCUDA.cu)
  set_target_properties(RVecCUDA PROPERTIES LINKER_LANGUAGE CUDA)
  target_compile_options(RVecCUDA PRIVATE -rdc=true -lineinfo --expt-relaxed-constexpr)
  set_target_properties(RVecCUDA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
  target_compile_definitions(RVecCUDA INTERFACE ROOT_MATH_CUDA)
endif()

add_executable(RVec RVec.cxx)
target_link_libraries(RVec PUBLIC ROOT::MathCore ROOT::ROOTVecOps)

if ( (NOT oneapi) AND (NOT opensycl) AND (NOT cuda) )
  add_executable(Coords Coords.cpp) 
  target_link_libraries(Coords PUBLIC GenVectorX SYCLMath)
endif()
#add_executable(RVec RVec.cpp)
#target_compile_options(RVec PUBLIC `root-config --libs --cflags`)